# AscEmu

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README-MIT.md  README.md  TERMS OF USE AGREEMENT  TERMS_OF_USE_AGREEMENT.md  THANKS  THANKS.md  appveyor.yml  ascemu-tag  git_version.sh  issue_template.md
cmake/scripts/: CMakeLists.txt
cmake/scripts/eventscripts/: CMakeLists.txt
cmake/scripts/gossipscripts/: CMakeLists.txt
cmake/scripts/instancescripts/: CMakeLists.txt
cmake/scripts/lualib/: CMakeLists.txt
cmake/scripts/miscscripts/: CMakeLists.txt
cmake/scripts/questscripts/: CMakeLists.txt
cmake/scripts/serverstatusplugin/: CMakeLists.txt
cmake/tools/mmaps_generator/: CMakeLists.txt
cmake/tools/vmap_tools/: CMakeLists.txt
dep/: CMakeLists.txt  DependecysList.txt  README.md
dep/StormLib/: CMakeLists.txt  README.md
dep/StormLib/doc/: The MoPaQ File Format 0.9.txt
dep/StormLib/src/: FileStream.cpp  SBaseCommon.cpp  SBaseFileTable.cpp  SFileAddFile.cpp  SFileFindFile.cpp  SFileGetFileInfo.cpp  SFileListFile.cpp  StormCommon.h  StormLib.h
dep/StormLib/test/: StormTest.cpp
dep/bzip2/: CMakeLists.txt  MANUAL.md  bzip2.c
dep/cotire/: MANUAL.md
dep/cotire/CMake/: cotire.cmake
dep/dbcfile/: CMakeLists.txt  dbcfile.cpp  dbcfile.h
dep/fmt/: CMakeLists.txt
dep/g3dlite/: AABox.cpp  BinaryFormat.cpp  BinaryOutput.cpp  CMakeLists.txt  CollisionDetection.cpp  CoordinateFrame.cpp  FileSystem.cpp  Matrix.cpp  TextInput.cpp  debugAssert.cpp  prompt.cpp
dep/include/detour/: DetourNavMesh.h
dep/include/libmpq_new/: common.h  explode.h  mpq-internal.h
dep/include/vmaplib/: MapTree.h  ModelInstance.h
dep/lib/: libeay32_debug_x64.lib  libeay32_release_x64.lib
dep/libmpq/: CMakeLists.txt  COPYING  LICENSE.md
dep/libmpq/libmpq/: common.c  common.h  explode.c  explode.h  extract.c  extract.h  huffman.c  huffman.h  mpq-internal.h  mpq.c  mpq.h  mpq_libmpq.cpp  mpq_libmpq04.h  pack_begin.h  pack_end.h  platform.h  wave.c  wave.h
dep/libmpq/tools/: crypt_buf_gen.c
dep/libmpq_new/: CMakeLists.txt  common.c  common.h  explode.c  extract.c  huffman.c  mpq.c  mpq.h  mpq_libmpq04.h  wave.c
dep/loadlib/: CMakeLists.txt  loadlib.cpp  loadlib.h  mpq_libmpq.cpp  mpq_libmpq04.h
dep/lualib/: CMakeLists.txt  lauxlib.h  lcode.h  ldebug.h  ldo.h  lfunc.h  lgc.c  lgc.h  lmem.h  lopcodes.h  lparser.h  lstring.h  ltm.h  lua.c  lzio.h
dep/lualib/src/: CMakeLists.txt
dep/lualib_5_0_1 - Kopie/: CMakeLists.txt  llex.h  llimits.h  lobject.h  lua.h  luaconf.h  lualib.h  lvm.h
dep/mysql/: big_endian.h  binary_log_types.h  byte_order_generic.h  byte_order_generic_x86.h  config-win.h  dbug.h  decimal.h  errmsg.h  keycache.h  little_endian.h  m_ctype.h  m_string.h  my_alloc.h  my_attribute.h  my_byteorder.h  my_command.h  my_compiler.h  my_config.h  my_dbug.h  my_dir.h  my_getopt.h  my_global.h  my_list.h  my_net.h  my_no_pthread.h  my_pthread.h  my_sys.h  my_thread.h  my_thread_local.h  my_xml.h  mysql.h  mysql_com.h  mysql_com_server.h  mysql_embed.h  mysql_time.h  mysql_version.h  raid.h  sql_common.h  sslopt-case.h  sslopt-longopts.h  (+5 more)
dep/mysql/mysql/: client_authentication.h  client_plugin.h  get_password.h  mysql_lex_string.h  plugin.h  plugin_auth_common.h  plugin_trace.h  service_my_snprintf.h  service_mysql_alloc.h
dep/openssl/: CMakeLists.txt
dep/openssl/openssl/: opensslconf.h
dep/pcre/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt  README.md
dep/stdfs/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt  utf8.h
dep/vmaplib/: BIH.cpp  CMakeLists.txt  MapTree.cpp  TileAssembler.cpp  VMapFactory.cpp  VMapManager2.cpp  WorldModel.cpp
dep/zlib/: CMakeLists.txt  zconf.h
src/: CMakeLists.txt  FormatReplace.py
src/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h  pchCollision.hpp
src/configs/: README.md  logon.conf.in  optional.conf.in  realms.conf.in  world.conf.in
src/crashreport/: CMakeLists.txt  Main.c
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  CMakeLists.txt  LogonCommServer.cpp  LogonCommServer.h  LogonConf.h.in  LogonConf.hpp.in  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonServer.cpp  LogonServer.hpp  LogonServerDefines.hpp  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Master.cpp  Master.hpp  PeriodicFunctionCall_Thread.h  README.md  logon_conf.h.in  pchLogon.hpp  resources.aps  resources.rc
src/scripts/: CMakeLists.txt  SendDBChatMessageList.txt
src/shared/: AEVersion.hpp.in  Array.h  AscemuServerDefines.hpp  AuthCodes.h  ByteBuffer.h  ByteConverter.h  ByteConverter.hpp  CMakeLists.txt  CRefcounter.h  CThreads.cpp  CThreads.h  CallBack.h  CircularQueue.h  Common.Legacy.h  Common.h  Common.hpp  Common.hpp.in  CommonDefines.hpp  CommonFilesystem.hpp  CommonHelpers.hpp  CommonTime.hpp  CommonTypes.hpp  CrashHandler.cpp  CrashHandler.h  DatabaseUpdater.cpp  DatabaseUpdater.h  DynLib.cpp  DynLib.hpp  Errors.h  FactoryHolder.h  FastQueue.h  FindFiles.cpp  FindFiles.hpp  FindFilesResult.hpp  LocationVector.cpp  LocationVector.h  LocationVector.hpp  Log.Legacy.cpp  Log.Legacy.h  Log.cpp  (+54 more)
src/tools/: CMakeLists.txt  ae_tools.bat  ae_tools.sh
src/world/: AIEvents.cpp  AIEvents.h  AIInterface.cpp  AIInterface.h  AchievementMgr.cpp  AchievementMgr.h  AddonMgr.cpp  AddonMgr.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  Battleground.cpp  Battleground.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CMakeLists.txt  CObjectFactory.cpp  CObjectFactory.h  CRitual.cpp  CRitual.h  CalendarHandler.cpp  CalendarMgr.cpp  CalendarMgr.h  CellHandler.h  CellHandlerDefines.hpp  Channel.cpp  Channel.h  ChannelHandler.cpp  (+255 more)
src/worldserver/: CMakeLists.txt  Main.cpp
(+4004 files in other folders)
